--- a/contact.html
+++ b/contact.html
@@ -269,7 +269,7 @@
 
         <div class="contact-info">
             <p><strong>Address:</strong> 2B Shonny Highway, Shonibare Estate, Maryland, Lagos</p>
-            <p><strong>Email:</strong> Okanynuel@gmail.com</p>
+            <p><strong>Email:</strong> info@claunecktech.com</p>
             <p><strong>Phone:</strong>07042573080</p>
         </div>
     </section>
@@ -323,10 +323,8 @@ h2 {
 							<p></p>
 							<div class="social_profile">
 								<ul>
-									<li><a href="#" class="f_facebook"><i class="ti-facebook" title="Facebook"></i></a></li>
-									<li><a href="#" class="f_twitter"><i class="ti-twitter" title="Twitter"></i></a></li>
-									<li><a href="#" class="f_instagram"><i class="ti-instagram" title="Instagram"></i></a></li>
-									<li><a href="#" class="f_linkedin"><i class="ti-linkedin" title="LinkedIn"></i></a></li>
+									<li><a href="https://www.facebook.com/share/1XLxz4aQmX/?mibextid=wwXIfr" class="f_facebook"><i class="ti-facebook" title="Facebook"></i></a></li>
+									<li><a href="LinkedIn.com/claunecktech-inc" class="f_linkedin"><i class="ti-linkedin" title="LinkedIn"></i></a></li>
 								</ul>
 							</div>
 						</div>			
