--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 					</div>
 					<div class="home_btns">
 						<a href="about.html" class="btn_one">Discover More</a>		
-						<a class="video-play" href=""><i class="ti-image"></i> <span class="video-title">Video Tour</span></a>
+						<a class="video-play" href="video.html"><i class="ti-image"></i> <span class="video-title">Video Tour</span></a>
 					</div>						
 				  </div><!--- END COL -->						  
 				</div><!--- END ROW -->
@@ -701,10 +701,10 @@
 						<p></p>
 						<div class="social_profile">
 							<ul>
-								<li><a href="#" class="f_facebook"><i class="ti-facebook" title="Facebook"></i></a></li>
-								<li><a href="#" class="f_twitter"><i class="ti-twitter" title="Twitter"></i></a></li>
-								<li><a href="#" class="f_instagram"><i class="ti-instagram" title="Instagram"></i></a></li>
-								<li><a href="#" class="f_linkedin"><i class="ti-linkedin" title="LinkedIn"></i></a></li>
+								<li><a href="https://www.facebook.com/share/1XLxz4aQmX/?mibextid=wwXIfr" class="f_facebook"><i class="ti-facebook" title="Facebook"></i></a></li>
+								<!-- <li><a href="#" class="f_twitter"><i class="ti-twitter" title="Twitter"></i></a></li>
+								<li><a href="#" class="f_instagram"><i class="ti-instagram" title="Instagram"></i></a></li> -->
+								<li><a href="LinkedIn.com/claunecktech-inc" class="f_linkedin"><i class="ti-linkedin" title="LinkedIn"></i></a></li>
 							</ul>
 						</div>
 					</div>			
