--- a/services.html
+++ b/services.html
@@ -356,10 +356,8 @@ Why Choose VigilantX?<br><br>
 							<p></p>
 							<div class="social_profile">
 								<ul>
-									<li><a href="#" class="f_facebook"><i class="ti-facebook" title="Facebook"></i></a></li>
-									<li><a href="#" class="f_twitter"><i class="ti-twitter" title="Twitter"></i></a></li>
-									<li><a href="#" class="f_instagram"><i class="ti-instagram" title="Instagram"></i></a></li>
-									<li><a href="#" class="f_linkedin"><i class="ti-linkedin" title="LinkedIn"></i></a></li>
+									<li><a href="https://www.facebook.com/share/1XLxz4aQmX/?mibextid=wwXIfr" class="f_facebook"><i class="ti-facebook" title="Facebook"></i></a></li>
+									<li><a href="LinkedIn.com/claunecktech-inc" class="f_linkedin"><i class="ti-linkedin" title="LinkedIn"></i></a></li>
 								</ul>
 							</div>
 						</div>			
